web-app/css/regions.css
/* Bootstrap customization */
.breadcrumb {
    margin-bottom: 0;
}

.text-right {
    text-align: right !important;
}

.text-left {
    text-align: left !important;
}

.text-center {
    text-align: center !important;
}

#region-map img {
    max-width: none;
}

#region-map label {
    width: auto; display:inline;
}

/* Common */
.link {
    cursor: pointer;
}

.hidden {
    display: none;
}

.nav-tabs li a {
    background-color: #f0f0e8;
    border: 1px solid #ddd;
    margin-right: 3px;
}

/************************************************************************************\
| Regions page
\************************************************************************************/
/* regions front page */

#header h1 {
    padding-left: 0 !important;
}

#map_canvas {
    height: 470px;
    border: 1px solid #d3d3d3;
    border-radius: 5px;
    margin: 9px 0 0 0;
}

#accordion {
    margin: 16px 0 0 5px;
    height: 446px;
}

#accordion h2 {
    line-height: normal;
}

#accordion h2 a {
    font-size: 15px;
    color: #333;
}

#accordion .ui-accordion-content {
    height: auto !important;
    max-height: 205px;
}

#accordion ul {
    /*list-style: none;*/
    margin: 0;
    font-size: 0.8em;
}

#accordion ul li:before {
    content: "";
}

.ui-widget {
    font-family: Verdana, Arial, sans-serif !important;
}

#click-info {
    font-size: 15px;
}

#zoomTo, #reset-map {
    margin-left: 1.5em;
    font-size: 12px;
    color: #666;
    cursor: pointer;
}

li.regionLink {
    cursor: pointer;
}

.ui-accordion-content li.selected {
    font-weight: bold;
}

#extra {
    margin-left: 1.5em;
    font-size: 14px;
    color: #666;
    cursor: pointer;
}

@media (max-width: 767px) {
    #rightPanel {
        margin-top: 8em;
    }
}

/************************************************************************************\
| Region page
\************************************************************************************/

#emblemsContainer {
    margin-bottom: .5em;
    margin-top: .5em;
}

#emblems .span3 {
    margin-bottom: 0;
}

#emblems .thumbnail {
    box-shadow: 3px 3px 8px 0px rgba(50, 50, 50, 0.7);
}

#emblems a {
    color: inherit;
}

#emblems a:hover {
    text-decoration: none;
    color: inherit;
}

#region-map {
    width: 100%;
    height: 480px;
    border: 1px solid #dddddd;
    border-radius: 5px;
}

#species .scrollContent {
    height: 400px;
}

#explorerTabs {
    margin-bottom: .6em;
}

#explorerTabs.nav-tabs li a, #controlsMapTab.nav-tabs li a {
    font-size: 1.1em;
}

.nav-tabs li a .popover-content {
    font-size: .9em;
}

.nav-tabs li.active a {
    background-color: #ffffff;
}

#groups, #species {
    height: 560px;
    max-height: 560px;
    margin-bottom: .8em;
}

#groups thead, #species thead{
    height: 30px;
    border-bottom: 1px solid #dddddd;
}

#species thead tr, #groups thead tr {
    display: block;
    position: relative;
    width: 100%;
}

#groups tbody, #species tbody {
    height: 530px;
    max-height: 530px;
    display: block;
    overflow-y: auto;
}

#groups tbody td, #species tbody td {
    border: 0;
}

#groups td, #species td {
    padding: 1px 1.5em 1px 1em;
    font-size: .9em;
}

#species tbody .spinner, #groups tbody .spinner {
    display: block;
    height: 99.5%;
}

#species tbody td.spinner i, #groups tbody td.spinner i {
    margin-top: 230px !important;
}

#groups {
    border-right: 1px solid #dddddd;
    float: left;
    table-layout: fixed;
    width: 45%;
}

#groups thead th {
    display:inherit;
}

#groups tbody tr {
    display: block;
}

#groups tbody td {
    display: inherit;
}

#groups td.level0 {
    font-weight: bold;
}

#groups td.level1 {
    padding-left: 2em;
}

#species {
    float: right;
    table-layout: fixed;
    width: 55%;
}

#species thead th:first-child {
    width: 85%;
}

#species td:first-child {
    padding-right: 0;
}

#species tbody tr.link td:first-child {
    width: 5%;
}

#species tr.infoRowLinks {
    background-color: #F0F0E8;
}

#species tr.infoRowLinks td{
    padding-bottom: 3px;
}

tr.groupSelected, tr.groupSelected:hover td {
    background-color: #C44D34 !important;
    color: white;
}

tr.speciesSelected, tr.speciesSelected:hover td {
    background-color: #C44D34 !important;
    color: white;
}

#showMoreSpeciesButton {
    min-width: 60%;
}

#exploreButtons a:first-child {
    margin-right: 8em;
}

#dialogZone div.modal-body {
    min-height: 250px;
}

#dialogZone div.modal-body i {
    margin-top: 120px;
}

#controlsMapTab {
    margin-bottom: 7px;
}

#timeControls {
    margin-bottom: 2.5em;
}

#timeSlider .ui-slider-label {
    font-size: .8em;
}

#timeSlider .ui-slider-handle {
    cursor: pointer;
}

#timeSlider .ui-slider-label {
    color: #999 !important;
}

#timeRange {
    text-align: center;
    margin-top: 1.6em;
}

#timeButtons {
    height: 2.5em;
}

.timeControl {
    width: 2em;
    height: 2em;
    padding-right: .8em;
    padding-top: .1em;
}

#playButton {
    background: url("../images/play.png") no-repeat ;
    background-size: 26px 26px;
    display: inline-block;
}

#playButton:hover, #playButton.selected  {
    background: url("../images/play-on.png") no-repeat ;
    background-size: 26px 26px;
    display: inline-block;
}

#pauseButton {
    background: url("../images/pause.png") no-repeat ;
    background-size: 26px 26px;
    display: inline-block;
}

#pauseButton:hover, #pauseButton.selected {
    background: url("../images/pause-on.png") no-repeat ;
    background-size: 26px 26px;
    display: inline-block;
}

#stopButton {
    background: url("../images/stop.png") no-repeat ;
    background-size: 26px 26px;
    display: inline-block;
}

#stopButton:hover, #stopButton.selected {
    background: url("../images/stop-on.png") no-repeat ;
    background-size: 26px 26px;
    display: inline-block;
}

#resetButton {
    background: url("../images/reset.png") no-repeat ;
    background-size: 26px 26px;
    display: inline-block;
}

#resetButton:hover, #resetButton.selected {
    background: url("../images/reset-on.png") no-repeat ;
    background-size: 26px 26px;
    display: inline-block;
}

#opacityControls {
    margin-top: .5em;
}

#opacityControls i {
    padding-right: .5em;
}

/* Taxonomy Chart */
#charts {
    text-align: center;
    overflow: hidden;
}

#charts i.spinner {
    margin-top: 150px;
}

#taxa {
    margin-bottom: 0 !important;
    margin-left: 20px;
    margin-top: 2em;
    text-align: left;

}

#taxa #backLink.link {
    margin-top: 1em;
    margin-right: 1em;
    /*From Bootstrap*/
    -moz-border-bottom-colors: none;
    -moz-border-left-colors: none;
    -moz-border-right-colors: none;
    -moz-border-top-colors: none;
    background-color: #f3f3ef;
    background-image: linear-gradient(to bottom, #fcfcfa, #e6e6dd);
    background-repeat: repeat-x;
    border-color: #cccccc #cccccc #b3b3b3;
    border-image: none;
    border-radius: 4px;
    border-style: solid;
    border-width: 1px;
    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
    color: #333333;
    cursor: pointer;
    display: inline-block;
    font-size: 13px;
    line-height: 20px;
    margin-bottom: 0;
    padding: 4px 12px;
    text-align: center;
    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
    vertical-align: middle;
}

#taxa #recordsLink.link {
    margin-top: 1em;
    /*From Bootstrap*/
    border-color: #cccccc #cccccc #b3b3b3;
    border-image: none;
    border-radius: 4px;
    border-style: solid;
    border-width: 1px;
    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
    cursor: pointer;
    display: inline-block;
    font-size: 13px;
    line-height: 20px;
    margin-bottom: 0;
    padding: 4px 12px;
    text-align: center;
    vertical-align: middle;
    background-color: #C44D34;
    background-image: linear-gradient(to bottom, #C44D34, #C44D34);
    background-repeat: repeat-x;
    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
    color: #ffffff;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
}

path {
    cursor: pointer;
}

